fix(textarea): disabled color in dark mode

--- a/packages/core/src/components/textarea/textarea-vars.scss
+++ b/packages/core/src/components/textarea/textarea-vars.scss
@@ -71,10 +71,10 @@
   --tds-textarea-disabled-background-primary: var(--tds-grey-900);
   --tds-textarea-disabled-background-secondary: var(--tds-grey-850);
   --tds-textarea-disabled-background: var(--tds-textarea-disabled-background-primary);
-  --tds-textarea-disabled-placeholder: var(--tds-grey-800);
-  --tds-textarea-disabled-label: var(--tds-grey-800);
-  --tds-textarea-helper-disabled: var(--tds-grey-800);
-  --tds-textarea-textcounter-disabled: var(--tds-grey-800);
+  --tds-textarea-disabled-placeholder: var(--tds-grey-500);
+  --tds-textarea-disabled-label: var(--tds-grey-500);
+  --tds-textarea-helper-disabled: var(--tds-grey-500);
+  --tds-textarea-textcounter-disabled: var(--tds-grey-500);
 
   // Label
   --tds-textarea-label-color: var(--tds-grey-50);
